--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-dgl_cu113==0.9.1.post1
 dgllife==0.2.8
 matplotlib==3.7.5
 numpy==1.24.3
 pandas==2.0.3
 prettytable==3.11.0
-scikit_learn==1.3.2
-scipy==1.14.1
-timm==1.0.11
-tqdm==4.65.0
-yacs==0.1.8
+scikit-learn
+scipy
+timm
+tqdm
+yacs
